build_errors.txt
    Blocking waiting for file lock on build directory
warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\lib.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: field `config_buffer` is never read
  --> astraweave-fluids\src\sdf.rs:24:5
   |
19 | pub struct SdfSystem {
   |            --------- field in this struct
...
24 |     config_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `astraweave-fluids` (lib) generated 3 warnings (run `cargo fix --lib -p astraweave-fluids` to apply 2 suggestions)
    Checking fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\laboratory.rs:5:12
  |
5 | use glam::{Mat4, Vec3};
  |            ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\ocean.rs:6:12
  |
6 | use glam::{Mat4, Vec3};
  |            ^^^^

error[E0599]: no method named `current_mut` found for struct `ScenarioManager` in the current scope
   --> examples\fluids_demo\src\main.rs:330:55
    |
330 |         if let Some(scenario) = self.scenario_manager.current_mut() {
    |                                                       ^^^^^^^^^^^
    |
   ::: examples\fluids_demo\src\scenarios\mod.rs:48:1
    |
48  | pub struct ScenarioManager {
    | -------------------------- method `current_mut` not found for this struct
    |
help: there is a method `current` with a similar name
    |
330 -         if let Some(scenario) = self.scenario_manager.current_mut() {
330 +         if let Some(scenario) = self.scenario_manager.current() {
    |

For more information about this error, try `rustc --explain E0599`.
warning: `fluids_demo` (bin "fluids_demo") generated 2 warnings
error: could not compile `fluids_demo` (bin "fluids_demo") due to 1 previous error; 2 warnings emitted
